--- a/android/app/src/main/res/layout/bottom_sheet_footprint.xml
+++ b/android/app/src/main/res/layout/bottom_sheet_footprint.xml
@@ -11,92 +11,149 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/Widget.Material3.BottomSheet"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/transparent"
+        android:paddingBottom="90dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_woof_status"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/rect_white_fill_30"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_foot_print"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/tv_woof_status_time"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="15dp"
+                android:text="30분째 산책중"
+                android:textColor="@color/coral500"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_woof_marker_createdAt"
+                style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size14"
+                createdAt="@{vm.uiState.footPrintInfo.createdAt}"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="55분전" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_foot_print"
-            style="@style/Widget.Material3.BottomSheet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="30dp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
-                android:id="@+id/drag_handle_woof_foot_print"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:paddingVertical="20dp"
+            app:layout_constraintTop_toBottomOf="@id/layout_woof_status">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_woof_dog"
                 glide="@{vm.uiState.footPrintInfo.footprintImageUrl}"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginHorizontal="90dp"
-                android:layout_marginTop="7dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="20dp"
                 app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintTop_toBottomOf="@id/drag_handle_woof_foot_print"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/RoundBig"
-                tools:src="@drawable/ic_launcher_background" />
+                tools:src="@drawable/img_dog" />
 
             <TextView
-                android:id="@+id/tv_woof_dog_walking"
-                style="@style/Theme.AppCompat.TextView.SemiBold.Gray10.Size18"
-                petName="@{vm.uiState.footPrintInfo.petName}"
-                dateOfVisit="@{vm.uiState.footPrintInfo.dateOfVisit}"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_woof_dog_name"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size24"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="10dp"
+                android:text="@{vm.uiState.footPrintInfo.petName}"
+                app:layout_constraintBottom_toTopOf="@id/tv_woof_member_name"
+                app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
+                app:layout_constraintTop_toTopOf="@id/iv_woof_dog"
+                tools:text="땡이" />
+
+            <TextView
+                android:id="@+id/tv_woof_member_name"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+                memberName="@{vm.uiState.footPrintInfo.memberName}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                app:layout_constraintStart_toEndOf="@id/iv_woof_dog"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_name"
+                tools:text="누누네 강아지" />
+
+            <TextView
+                android:id="@+id/tv_woof_dog_information"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:text="정보"
+                app:layout_constraintBottom_toTopOf="@id/tv_woof_dog_age"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_woof_dog"
-                tools:text="땡이가 10분 전에 다녀갔어요!" />
+                app:layout_constraintTop_toBottomOf="@id/iv_woof_dog" />
 
             <TextView
                 android:id="@+id/tv_woof_dog_age"
                 style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/rect_orange700_fill_12"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rect_coral300_fill_20"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{vm.uiState.footPrintInfo.petAge}"
-                app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_size"
+                petAge="@{vm.uiState.footPrintInfo.petBirthDate}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
                 tools:text="11살" />
 
             <TextView
                 android:id="@+id/tv_woof_dog_size"
                 style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+                petSizeType="@{vm.uiState.footPrintInfo.petSizeType}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/rect_orange700_fill_12"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rect_coral300_fill_20"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{vm.uiState.footPrintInfo.petSizeType}"
-                app:layout_constraintEnd_toStartOf="@id/tv_woof_dog_gender"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_age"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
                 tools:text="소형견" />
 
             <TextView
                 android:id="@+id/tv_woof_dog_gender"
                 style="@style/Theme.AppCompat.TextView.Regular.White.Size14"
+                petGender="@{vm.uiState.footPrintInfo.petGender}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/rect_orange700_fill_12"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/rect_coral300_fill_20"
                 android:paddingHorizontal="25dp"
                 android:paddingVertical="7dp"
-                android:text="@{vm.uiState.footPrintInfo.petGender}"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/tv_woof_dog_size"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_walking"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_information"
                 tools:text="암컷" />
 
             <TextView
@@ -105,7 +162,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="15dp"
                 android:text="소개"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_age" />
@@ -117,10 +174,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/rect_orange100_fill_12"
-                android:minHeight="80dp"
+                android:background="@drawable/rect_coral100_fill_12"
+                android:maxLines="2"
+                android:minHeight="60dp"
                 android:padding="15dp"
                 android:text="@{vm.uiState.footPrintInfo.petDescription}"
+                android:textColor="@color/gray800"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_dog_introduce"
                 tools:text="땡이는 사람을 좋아해요! 땡이를 보게 되면 말 걸어주세요!!" />
         </androidx.constraintlayout.widget.ConstraintLayout>
