--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -79,7 +79,7 @@
             android:background="@drawable/rect_coral400_fill_12"
             android:gravity="center"
             android:onClick="@{() -> actionHandler.clickMyFootprintBtn()}"
-            android:text="MY"
+            android:text="@string/woof_my_footprint"
             app:layout_constraintBottom_toTopOf="@id/btn_woof_mark"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -101,8 +101,8 @@
         <TextView
             android:id="@+id/tv_woof_walk_status"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            changedWalkStatusTime="@{vm.footprintInfo.changedWalkStatusTime}"
-            walkStatus="@{vm.footprintInfo.walkStatus}"
+            changedWalkStatusTime="@{vm.footprintWalkStatus.changedWalkStatusTime}"
+            walkStatus="@{vm.footprintWalkStatus.walkStatus}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
@@ -186,13 +186,13 @@
             tools:visibility="visible">
 
             <TextView
-                android:id="@+id/tv_woof_mark_walking_area"
+                android:id="@+id/tv_woof_register_walking_area"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                android:text="산책 영역 등록"
+                android:text="@string/woof_register_walking_area"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -205,11 +205,11 @@
                 android:layout_marginTop="8dp"
                 android:text="@{vm.address}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_mark_walking_area"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walking_area"
                 tools:text="서울 송파구 올림픽로35다길 42" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_woof_register_marker"
+                android:id="@+id/btn_woof_register_footprint"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -217,7 +217,7 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/rect_coral400_fill_16"
                 android:onClick="@{() -> actionHandler.clickRegisterMarkerBtn()}"
-                android:text="이 위치에 발자국 등록"
+                android:text="@string/woof_register_footprint"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -243,7 +243,6 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:autoHandwritingEnabled="false"
                 app:lottie_fileName="animation_loading.json"
                 app:lottie_loop="true" />
         </FrameLayout>
