--- a/android/app/src/main/res/layout/activity_my_club.xml
+++ b/android/app/src/main/res/layout/activity_my_club.xml
@@ -5,8 +5,8 @@
 
     <data>
         <variable
-            name="vm"
-            type="com.happy.friendogly.presentation.ui.club.my.MyClubViewModel" />
+            name="actionHandler"
+            type="com.happy.friendogly.presentation.ui.club.my.MyClubActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,6 +21,7 @@
             android:layout_height="56dp"/>
 
         <ImageView
+            onSingleClick="@{()->actionHandler.closeMyClub()}"
             android:id="@+id/iv_club_select_back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,5 +71,16 @@
             app:layout_constraintTop_toBottomOf="@+id/tl_my_club"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
+
+        <ImageButton
+            onSingleClick="@{()->actionHandler.addClub()}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ripple_circle_white"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_club_add_button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
